--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "v-calendar": "^1.0.0-beta.23",
+        "vue-router": "^3.1.6"
     }
 }
